added index page

--- a/public/index.html
+++ b/public/index.html
@@ -48,24 +48,6 @@
 </head>
 <body data-spy="scroll" data-target=".scrollspy" class="bg-dark">
 
-<!-- HTML Canvas -->
-<!-- <div id="raindrop" class="section-overlay">
-  <canvas id="rain"></canvas>
-</div> -->
-
-<!-- <canvas id="canvas" style="position: absolute;" width="1400" height="600"></canvas> -->
-<!-- /End HTML Canvas -->
-
-<!-- Preloader  -->
-<div class="loader bg-dark">
-  <div class="loader-inner ball-scale-ripple-multiple ball-scale-ripple-multiple-color">
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
-</div>
-<!-- /End Preloader  -->
-
 <div id="page">
 
 <!-- ============================
@@ -111,10 +93,12 @@
 
             <!-- Buttons -->
             <div class="p-t-b-15 btn-row" id="options">
-              <button
-                class="btn btn-color raindrop"
-                role="button">Contact
-              </button>
+              <a href="mailto:tradingdesk@mahadao.com">
+                <button
+                  class="btn btn-color raindrop"
+                  role="button">Contact Us
+                </button>
+              </a>
             </div>
             <!-- /End Buttons -->
           </div>
