updated decsription a bit more

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
       ================================= -->
 
       <div id="info" class="col-md-12 text-white text-center page-info col-transform">
-        <div class="vert-middle">
+        <div>
           <div class="reveal scale-out">
 
             <!-- Logo -->
@@ -72,18 +72,20 @@
                 MahaTrade
               </h2>
 
-              <p>
-                MahaTrade is the trading arm of the MahaDAO that focuses specifically <br />
-                on market-making, market neutral quant strategies and executing <br />
-                various forms of arbitrage. We operate across decentralised (layer 1 & layer 2) <br />
-                and centralised markets.<br />
+              <p style="max-width: 400px; margin: 0 auto">
+                MahaTrade is a London-based trading/market-making arm of
+                <a style="color: #fff; text-decoration: none; border-bottom: 1px dotted #fff" href="https://mahadao.com">MahaDAO.com</a>
+                that focuses specifically
+                on market-making, quant strategies and arbitrage.
+                We operate across decentralised (layer 1 & layer 2) and
+                centralised cryptocurrency markets.
               </p>
               <br />
-              <p>
-                Our expertise has been on stablecoins. We help create efficient <br />
-                and liquid markets and help grow the entire ecosystem.
+              <p style="max-width: 400px; margin: 0 auto">
+                Our expertise has been on stablecoins, mostly on the ARTH stablecoin.
+                But we also help create efficient and liquid markets for other
+                mid & low cap stablecoins.
               </p>
-              <!-- /End Headline & Description -->
             </div>
 
             <!-- Buttons -->
