--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
   <link rel="stylesheet"
         href="css/icons/linea.css">
 
+  <meta property="og:title" content="MahaTrade | Stablecoin Market-Making">
+  <meta property="og:site_name" content="MahaTrade">
+  <meta property="og:url" content="MahaTrade.com">
+  <meta property="og:description" content="MahaTrade is a London-based trading/market-making firm by MahaDAO.com that focuses specifically on market-making, quant strategies and arbitrage. We operate across decentralised (layer 1 & layer 2) an">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://mahatrade.xyz/images/MahaSwap.png">
+
   <!-- Google Fonts -->
   <link rel="stylesheet" type="text/css"
         href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700">
@@ -73,7 +80,7 @@
               </h2>
 
               <p style="max-width: 400px; margin: 0 auto">
-                MahaTrade is a London-based trading/market-making arm of
+                MahaTrade is a London-based trading/market-making firm by
                 <a style="color: #fff; text-decoration: none; border-bottom: 1px dotted #fff" href="https://mahadao.com">MahaDAO.com</a>
                 that focuses specifically
                 on market-making, quant strategies and arbitrage.
