minor changes to the text

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
               </h2>
 
               <p style="max-width: 400px; margin: 0 auto">
-                MahaTrade is a London-based trading/market-making firm by
+                MahaTrade is a London-based trading firm backed by
                 <a style="color: #fff; text-decoration: none; border-bottom: 1px dotted #fff" href="https://mahadao.com">MahaDAO.com</a>
                 that focuses specifically
                 on market-making, quant strategies and arbitrage.
@@ -91,13 +91,13 @@
               <p style="max-width: 400px; margin: 0 auto">
                 Our expertise has been on stablecoins, mostly on the ARTH stablecoin.
                 But we also help create efficient and liquid markets for other
-                mid & low cap stablecoins.
+                mid & low cap projects.
               </p>
             </div>
 
             <!-- Buttons -->
             <div class="p-t-b-15 btn-row" id="options">
-              <a href="mailto:tradingdesk@mahadao.com">
+              <a href="mailto:trading@mahadao.com">
                 <button
                   class="btn btn-color raindrop"
                   role="button">Contact Us
