--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
               </p>
               <br />
               <p style="max-width: 400px; margin: 0 auto">
-                Our expertise has been on stablecoins, mostly on the ARTH stablecoin.
-                But we also help create efficient and liquid markets for other
-                mid & low cap projects.
+                Our focus is mostly on stablecoins, mostly on ARTH and other
+                stablecoins. But we also help create efficient and liquid
+                markets for other mid & low cap projects.
               </p>
             </div>
 
