--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
               </p>
               <br />
               <p style="max-width: 400px; margin: 0 auto">
-                Our focus is mostly on stablecoins, mostly on ARTH and other
-                stablecoins. But we also help create efficient and liquid
+                Our focus is mostly on stablecoins, mostly on ARTH and
+                USD-peged stablecoins. But we also help create efficient and liquid
                 markets for other mid & low cap projects.
               </p>
             </div>
